# self_work_6

./: .gitignore  README.md  manage.py  project_structure.txt  pyproject.toml  requirements.txt  update_slugs.py
Django_Spam_Service_2024/: asgi.py  settings.py  urls.py  wsgi.py
Django_Web_Store/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_detail.html  post_form.html  post_list.html
blogpost/: forms.py  models.py  urls.py  views.py
blogpost/catalog/: forms.py  models.py  urls.py  views.py
blogpost/migrations/: 0001_initial.py  0002_alter_blogpost_created_at_alter_blogpost_slug.py  0003_alter_blogpost_slug_alter_blogpost_title.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_data.json
catalog/migrations/: 0001_initial.py  0002_initial.py  0002_product_image.py  0003_contact.py  0003_product_moderation_status.py  0004_version.py  0005_product_moderation_status_product_publish_status_and_more.py
catalog/templates/: base.html  contacts.html  create_product.html  delete_product.html  edit_product.html  home.html  navbar.html  product_detail.html  product_list.html
mailing_service/: __init__.py  admin.py  apps.py  forms.py  models.py  service.py  tasks.py  urls.py  utils.py  views.py
mailing_service/migrations/: 0001_initial.py  0002_initial.py
mailing_service/templatetags/: mediapath.py
users/: admin.py  apps.py  context_processors.py  forms.py  models.py  permissions.py  signals.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
(+43 files in other folders)
